--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,11 @@ sicstus.exe.lnk
 spwin.exe.lnk
 
 Prolog.xml
+
+### vscode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
