--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "feup-plog-proj"]
 	path = feup-plog-proj
 	url = git@github.com:Ca-moes/feup-plog-proj.git
+[submodule "feup-plog-proj-2"]
+	path = feup-plog-proj-2
+	url = git@github.com:Ca-moes/feup-plog-proj-2.git
